Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: N/A
-
Fix Version/s: 10.6.1
-
Component/s: Storage Engine - InnoDB
-
Labels:None
Description
bb-10.6-monty-innodb 98ff31770 |
2021-05-13 4:00:12 0 [Note] InnoDB: Setting log file ./ib_logfile101 size to 100663296 bytes
|
2021-05-13 4:00:12 0 [Note] InnoDB: Renaming log file ./ib_logfile101 to ./ib_logfile0
|
2021-05-13 4:00:12 0 [Note] InnoDB: New log file created, LSN=8337128
|
2021-05-13 4:00:12 0 [Note] InnoDB: 2 transaction(s) which must be rolled back or cleaned up in total 17 row operations to undo
|
2021-05-13 4:00:12 0 [Note] InnoDB: Trx id counter is 4846
|
2021-05-13 4:00:12 0 [Note] InnoDB: 128 rollback segments are active.
|
2021-05-13 4:00:12 0 [ERROR] InnoDB: Operating system error number 2 in a file operation.
|
2021-05-13 4:00:12 0 [ERROR] InnoDB: The error means the system cannot find the path specified.
|
2021-05-13 4:00:12 0 [ERROR] InnoDB: Cannot open datafile for read-only: './test/#sql-alter-44b2b-a.ibd' OS error: 71
|
2021-05-13 4:00:12 0 [ERROR] InnoDB: Operating system error number 2 in a file operation.
|
2021-05-13 4:00:12 0 [ERROR] InnoDB: The error means the system cannot find the path specified.
|
2021-05-13 4:00:12 0 [ERROR] InnoDB: Could not find a valid tablespace file for ``test`.`#sql-alter-44b2b-a``. Please refer to https://mariadb.com/kb/en/innodb-data-dictionary-troubleshooting/ for how to resolve the issue.
|
2021-05-13 4:00:12 0 [Warning] InnoDB: Ignoring tablespace for `test`.`#sql-alter-44b2b-a` because it could not be opened.
|
The test runs a mix of DML and DDL in a few threads and periodically executes MariaBackup to take a full data backup. Afterwards, the original server is shut down, each backup in turn is prepared and the server is started upon it.
On one of backups the errors above occur.
The error appears to be specific to recovery in the atomic DDL branch and reproducible fairly easily on the revision above. If the same prepared backup is given to vanilla 10.6 server, it starts without any errors.
Logs, data directories and rr profiles are available.
To reproduce from scratch:
git clone https://github.com/MariaDB/randgen --branch mdev25666 rqg-mdev25666
|
cd rqg-mdev25666
|
. ./mdev25666.cmd <basedir>
|
The command line runs max 5 test attempts, until the first unsuccessful one. It currently fails for me on the first or second attempt.
Attachments
Issue Links
- relates to
-
MDEV-17567 Atomic DDL
-
- Closed
-
-
MDEV-25854 Restoring a backup may result in garbage intermediate tables from DDL
-
- Closed
-
-
MDEV-25899 intermediate files operations are not protected by backup locks
-
- Closed
-