extra/mariabackup/xtrabackup.cc
@@ -2618,10 +2618,6 @@ check_if_skip_table(
 		tbname = ptr + 1;
 	}
 
-	if (strncmp(tbname, tmp_file_prefix, tmp_file_prefix_length) == 0) {
-		return TRUE;
-	}
-
 	if (regex_exclude_list.empty() &&
 		regex_include_list.empty() &&
 		!tables_include_hash.array &&
